objects/redwing__Criterion__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Criteria_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria Bank</label>
        <referenceTo>redwing__Criteria_Bank__c</referenceTo>
        <relationshipName>riteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Criterion</label>
    <listViews>
        <fullName>redwing__All2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>